--- a/index.html
+++ b/index.html
@@ -1,1 +1,266 @@
-hello world
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Park Bum Jin Portfolio</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+
+    <style>
+        .updown {
+    	border: 2px solid black;
+        width: 0.1px;
+        height: 500px;
+        }
+    </style>
+
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg bg-dark text-white fixed-top" id="sideNav">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <span class="d-block d-lg-none">박범진</span>
+                <span class="d-none d-lg-block"></span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>                  
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Project</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Page Content-->
+        <div class="container-fluid p-0">
+            <!-- About-->
+            <section class="resume-section" id="about">
+                <div class="resume-section-content">
+                    <h2 class="mb-0" style="text-transform:capitalize;"></h2>                   
+                    <br>
+                    <div></div>
+                    <h3>다양한 웹 애플리케이션 개발 경험 | 풀스택 웹 개발자</h3>
+                    <br>
+                    <font size="3" color="black">
+                    <div></div><div style="font-size:1.5em;"></div><div></div>
+                    </font>
+                    <div class="subheading mb-5">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <br>
+                                <h3>Profile</h3>
+                                <table>
+                                    <tr>
+                                        <td>Name</td>
+                                        <td>&nbsp;:&nbsp;</td>
+                                        <td style="text-transform:capitalize;">박범진</td>
+                                    </tr>
+                                    <tr>
+                                        <td>CONTACT</td>
+                                        <td>&nbsp;:&nbsp;</td>
+                                        <td style="text-transform:capitalize;">010-8185-8624</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Birth</td>
+                                        <td>&nbsp;:&nbsp;</td>
+                                        <td style="text-transform:capitalize;">1996.07.12</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Major</td>
+                                        <td>&nbsp;:&nbsp;</td>
+                                        <td style="text-transform:capitalize;">인천대학교 정보통신공학과</td>
+                                    </tr>
+                                </table>
+                                <br>
+                                <h3>CERTIFICATE</h3>
+                                <font size="4" color="black">
+                                    <table>
+					                    <tr>
+                                            <td style="text-transform:capitalize;">SQLD (SQL 개발자)</td>
+                                            <td>&nbsp; :&nbsp; 2023.12.15</td>
+                                        </tr> 
+					                    <tr>
+                                            <td style="text-transform:capitalize;">리눅스마스터 2급</td>
+                                            <td>&nbsp; :&nbsp; 2023.10.06</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="text-transform:capitalize;">정보처리기사</td>
+                                            <td>&nbsp; :&nbsp; 2021.08.20</td>
+                                        </tr>
+					                    <tr>
+                                            <td style="text-transform:capitalize;">OPIc IM1</td>
+                                            <td>&nbsp; :&nbsp; 2021.12.15</td>
+                                        </tr>
+                                    </table>
+                                </font>
+                            </div>
+                            <div class="col-sm-1">
+                                <br><div class="updown"></div>
+                            </div>
+                            <div class="col-sm-5">
+                                <br>
+                                <h3>CAREER</h3>
+                                <font size="4" color="black">
+                                    <table>
+                                        <tr>
+                                            <td>코드아이디어</td>
+                                            <td>&nbsp; :&nbsp; 재직중</td>
+                                        </tr>
+                                        <tr>
+                                            <td>(주) 유알피</td>
+                                            <td>&nbsp; :&nbsp; 2022.08 ~ 2023.08</td>
+                                        </tr>
+                                    </table>
+                                </font>
+                                <br>
+                                <br>
+                                <br>
+                                <br>
+                                <h3>GIT LINK</h3>
+                                <div class="social-icons">
+                                    <a class="social-icon" href="https://github.com/orion174"><i class="fab fa-github"></i></a>
+                                    <font size="4" color="black">
+                                        <a href="https://github.com/orion174">https://github.com/orion174</a>
+                                    </font>
+                                </div>
+                            </div>
+                        </div>    
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            
+            <!-- Skills-->
+            <section class="resume-section" id="skills">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Skills</h2>
+                    <ul class="list-inline dev-icons">
+                        <font size="5" color="black">
+                            <div>
+                                <h3 class="mb-0">- Back-End</h3>
+                                &nbsp;&nbsp;Java, Spring boot, eGovFrame
+                            </div>
+                            <br>
+                            <div>
+                                <h3 class="mb-0">- Data Base</h3>
+                                &nbsp;&nbsp;Oracle, MySql
+                            </div>
+                            <br>
+                            <div>
+                                <h3 class="mb-0">- Web Front-End</h3>
+                                &nbsp;&nbsp;JavaScript, Thymeleaf, JQuery, JSP, HTML5
+                            </div>
+                            <br>
+                            <div>
+                                <h3 class="mb-0">- Server</h3>
+                                &nbsp;&nbsp;Apache Tomcat, AWS Lightsail, WebLogic
+                            </div> 
+                            <br>
+			                <div>
+                                <h3 class="mb-0">- OS</h3>
+                                &nbsp;&nbsp;Linux
+                            </div> 
+                            <br>
+                            <div>
+                                <h3 class="mb-0">- Collaboration Tools</h3>
+                                 &nbsp;&nbsp;GitHub
+                            </div>
+                       </font>
+                   </ul>
+            </section>              
+            <hr class="m-0" />         
+            <hr class="m-0" />
+            <!-- Experience-->
+            <section class="resume-section" id="experience">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Project</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">학습관리 시스템 (LMS)</h3>
+                            <br>
+				            <p>
+					            <img src="assets/img/ex1.png" style="width: 100%;">
+				            </p>
+                            <br>
+                            <P>
+                                <strong>LMS Project</strong><br>
+                                <br>
+                                학생들의 강의 및 학습 사항을 관리할 수 있는 매니지먼트 기능이 있는 사이트입니다.<br>
+                                관리자는 회원 관리, 게시판 관리, 강좌 목록, 통계, 설문조사를 관리할 수 있습니다.<br>
+                            </P>
+                            <p>
+                                <button type="button" class="btn btn-link" onclick="window.open('https://github.com/gdjJavaJoy/javajoylms')">Github</button>
+                                <button type="button" class="btn btn-link" onclick="window.open('assets/img/LMS 프로젝트.pdf')">PPT</button>
+                            </p>
+                            <p>
+                                <strong>Development Environment</strong><br>
+                                <br>
+                                Language : Java(jdk-11.0), JavaScript</br>
+                                Framework : Spring Boot, MyBatis<br>
+                                Library : jstl, jQuery, Ajax, Lombok, BootStrap<br>
+                                Database : MariaDB<br>
+                                WAS : Apache Tomcat9 <br>
+                                IDE : Spring Tool Suite 4
+                            </p>
+                            <p>
+                                <strong>Service Environment</strong><br>
+                                OS: Ubuntu (16.04) <br>
+                                Platform : AWS Lightsail
+                            </p>
+				            <br>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2022 - July 2022</span></div>
+                        </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">조립식 컴퓨터 쇼핑몰</h3>
+                            <br>
+                            <p>
+                                <img src="assets/img/Computer.jpg" style="width: 100%;">
+                            </p>
+                            <p>
+                                <strong>Com Velvet</strong><br>
+				            <P>
+			                 Model2 방식으로 조립식 컴퓨터 쇼핑몰을 구현하였습니다.<br>
+			                 관리자 페이지에서 부품을 관리하고, 수정할 수 있도록 했습니다.<br>
+			                 관리자 페이지나 index 페이지에서는 홍보를 하고, 최근 공지사항을 보여줍니다.<br>
+			                 회원은 주문을 하고 주문조회를 할 수 있습니다.<br>
+				            </P>
+                            <p>
+                                <button type="button" class="btn btn-link" onclick="window.open('https://github.com/Computer-ShoppingMall-Project')">Github</button>
+                                <button type="button" class="btn btn-link" onclick="window.open('assets/img/Com Velvet 프로젝트.pdf')">PPT</button>
+                            </p>
+                            <p>
+                                <strong>Development Environment</strong><br>
+                                <br>
+                                Language : Java(jdk-11.0), JavaScript <br>
+                                Skills : JSP, jQuery, BootStrap <br>
+                                Database : MariaDB <br>
+                                WAS : Apache Tomcat9 <br>
+                                IDE : Eclipse 2021-06 (4.18.0)
+                            </p>
+                            <p>
+                                <strong>Service Environment</strong><br>
+                                OS: Ubuntu (16.04) <br>
+                                Platform : AWS Lightsail
+                            </p>
+				            <br>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2022 - May 2022</span></div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </body>
+</html>
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Core theme JS-->
+<script src="js/scripts.js"></script>
