--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <h2 class="mb-0" style="text-transform:capitalize;"></h2>                   
                     <br>
                     <div></div>
-                    <h3>다양한 웹 애플리케이션 개발 경험 | 풀스택 웹 개발자</h3>
+                    <h3>Java & Spring 기반, 실전형 풀스택 웹 개발 경험</h3>
                     <br>
                     <font size="3" color="black">
                     <div></div><div style="font-size:1.5em;"></div><div></div>
@@ -65,12 +65,7 @@
                                     <tr>
                                         <td>CONTACT</td>
                                         <td>&nbsp;:&nbsp;</td>
-                                        <td style="text-transform:capitalize;">010-8185-8624</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Birth</td>
-                                        <td>&nbsp;:&nbsp;</td>
-                                        <td style="text-transform:capitalize;">1996.07.12</td>
+                                        <td style="text-transform:capitalize;">010-6258-8390</td>
                                     </tr>
                                     <tr>
                                         <td>Major</td>
@@ -95,7 +90,7 @@
                                             <td>&nbsp; :&nbsp; 2021.08.20</td>
                                         </tr>
 					                    <tr>
-                                            <td style="text-transform:capitalize;">OPIc IM1</td>
+                                            <td style="text-transform:capitalize;">OPIC IM1</td>
                                             <td>&nbsp; :&nbsp; 2021.12.15</td>
                                         </tr>
                                     </table>
@@ -110,11 +105,11 @@
                                 <font size="4" color="black">
                                     <table>
                                         <tr>
-                                            <td>코드아이디어</td>
-                                            <td>&nbsp; :&nbsp; 재직중</td>
+                                            <td>코드아이디어 자바개발팀 주임</td>
+                                            <td>&nbsp; :&nbsp; 2024.03 ~ 2025.04</td>
                                         </tr>
                                         <tr>
-                                            <td>(주) 유알피</td>
+                                            <td>유알피 행정포털팀 사원</td>
                                             <td>&nbsp; :&nbsp; 2022.08 ~ 2023.08</td>
                                         </tr>
                                     </table>
@@ -142,124 +137,158 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <ul class="list-inline dev-icons">
-                        <font size="5" color="black">
+                        <div style="font-size: 1.2rem; color: black;">
                             <div>
-                                <h3 class="mb-0">- Back-End</h3>
-                                &nbsp;&nbsp;Java, Spring boot, eGovFrame
+                                <h3 class="mb-1">- Back-End</h3>
+                                <p>&nbsp;&nbsp;Java (8~17), Spring Boot, JPA, MyBatis, eGovFrame, REST API</p>
                             </div>
                             <br>
                             <div>
-                                <h3 class="mb-0">- Data Base</h3>
-                                &nbsp;&nbsp;Oracle, MySql
+                                <h3 class="mb-1">- Front-End</h3>
+                                <p>&nbsp;&nbsp;JavaScript (ES6+), React, TypeScript, jQuery, Thymeleaf, JSP, HTML5</p>
                             </div>
                             <br>
                             <div>
-                                <h3 class="mb-0">- Web Front-End</h3>
-                                &nbsp;&nbsp;JavaScript, Thymeleaf, JQuery, JSP, HTML5
+                                <h3 class="mb-1">- Database</h3>
+                                <p>&nbsp;&nbsp;MySQL, Oracle</p>
                             </div>
                             <br>
                             <div>
-                                <h3 class="mb-0">- Server</h3>
-                                &nbsp;&nbsp;Apache Tomcat, AWS Lightsail, WebLogic
-                            </div> 
-                            <br>
-			                <div>
-                                <h3 class="mb-0">- OS</h3>
-                                &nbsp;&nbsp;Linux
-                            </div> 
+                                <h3 class="mb-1">- DevOps & Server</h3>
+                                <p>&nbsp;&nbsp;Linux (Ubuntu/CentOS), Docker, docker-compose, Nginx, Apache Tomcat, AWS EC2 / RDS</p>
+                            </div>
                             <br>
                             <div>
-                                <h3 class="mb-0">- Collaboration Tools</h3>
-                                 &nbsp;&nbsp;GitHub
+                                <h3 class="mb-1">- Tools & Collaboration</h3>
+                                <p>&nbsp;&nbsp;GitHub, IntelliJ, Postman, Swagger</p>
                             </div>
-                       </font>
+                        </div>
                    </ul>
             </section>              
             <hr class="m-0" />         
             <hr class="m-0" />
+
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Project</h2>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">웹 기반 프로젝트 관리 시스템 (CPMS)</h3>
+                            <br>
+                            <p>
+                                <img src="assets/img/cpms_image.jpeg" style="width: 100%;">
+                            </p>
+                            <br>
+                            <p>
+                                <strong>📌 프로젝트 개요</strong><br><br>
+                                웹 프로젝트의 운영 및 유지보수 이력을 체계적으로 관리하고, 각 시스템의 담당자와 소통할 수 있는 내부용 PMS 시스템을 개발하였습니다.<br>
+                                기업 내 다양한 웹 서비스의 이슈, 요청사항, 처리 이력 등을 관리하는 백오피스 시스템으로서 <b>Spring Boot + React</b> 기반으로 전면 재설계한 <b>개인 프로젝트</b>입니다.
+                            </p>
+
+                            <p>
+                                <button type="button" class="btn btn-link" onclick="window.open('https://github.com/orion174/cpms_api')">GitHub (Back-End)</button>
+                                <button type="button" class="btn btn-link" onclick="window.open('https://github.com/orion174/cpms_client_web')">GitHub (Front-End)</button>
+                                <button type="button" class="btn btn-link" onclick="window.open('assets/img/cpms_project.pdf')">PDF 보기</button>
+                            </p>
+
+                            <p>
+                                <strong>🛠 개발 환경</strong><br><br>
+                                <b>Back-End</b>: Java 17, Spring Boot 3.2, JPA, QueryDSL<br>
+                                <b>Front-End</b>: React 18 (Vite), TypeScript, Axios<br>
+                                <b>Database</b>: MariaDB<br>
+                                <b>Infra Tools</b>: Docker, Nginx
+                            </p>
+
+                            <p>
+                                <strong>🚀 배포 및 운영 환경</strong><br><br>
+                                <b>OS</b>: Ubuntu 22.04 (x64)<br>
+                                <b>Server</b>: AWS EC2 (Backend), AWS RDS (DB), Nginx (Frontend Proxy)<br>
+                                <b>Domain</b>: DuckDNS 커스텀 서브도메인 (HTTPS 적용)<br>
+                                <b>배포 방식</b>: Docker + Nginx 기반 이중 컨테이너 구성
+                            </p>
+                    </div>
+
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">학습관리 시스템 (LMS)</h3>
                             <br>
-				            <p>
-					            <img src="assets/img/ex1.png" style="width: 100%;">
-				            </p>
+                            <p>
+                                <img src="assets/img/ex1.png" style="width: 100%;">
+                            </p>
                             <br>
-                            <P>
-                                <strong>LMS Project</strong><br>
-                                <br>
-                                학생들의 강의 및 학습 사항을 관리할 수 있는 매니지먼트 기능이 있는 사이트입니다.<br>
-                                관리자는 회원 관리, 게시판 관리, 강좌 목록, 통계, 설문조사를 관리할 수 있습니다.<br>
-                            </P>
                             <p>
-                                <button type="button" class="btn btn-link" onclick="window.open('https://github.com/gdjJavaJoy/javajoylms')">Github</button>
-                                <button type="button" class="btn btn-link" onclick="window.open('assets/img/LMS 프로젝트.pdf')">PPT</button>
+                                <strong>📌 LMS 프로젝트 개요</strong><br><br>
+                                학생의 강의 수강 및 학습 이력을 통합 관리하는 웹 기반 학습관리 시스템입니다.<br>
+                                관리자는 회원 정보, 강의 콘텐츠, 설문조사, 통계 데이터를 효율적으로 관리할 수 있습니다. (팀 프로젝트)
                             </p>
+
                             <p>
-                                <strong>Development Environment</strong><br>
-                                <br>
-                                Language : Java(jdk-11.0), JavaScript</br>
-                                Framework : Spring Boot, MyBatis<br>
-                                Library : jstl, jQuery, Ajax, Lombok, BootStrap<br>
-                                Database : MariaDB<br>
-                                WAS : Apache Tomcat9 <br>
-                                IDE : Spring Tool Suite 4
+                                <button type="button" class="btn btn-link" onclick="window.open('https://github.com/gdjJavaJoy/javajoylms')">GitHub</button>
+                                <button type="button" class="btn btn-link" onclick="window.open('assets/img/lms_project.pdf')">PDF 보기</button>
                             </p>
+
                             <p>
-                                <strong>Service Environment</strong><br>
-                                OS: Ubuntu (16.04) <br>
-                                Platform : AWS Lightsail
+                                <strong>🛠 개발 환경</strong><br><br>
+                                <b>Language</b>: Java 11, JavaScript<br>
+                                <b>Framework</b>: Spring Boot, MyBatis<br>
+                                <b>Library</b>: JSTL, jQuery, Ajax, Bootstrap, Lombok<br>
+                                <b>Database</b>: MariaDB<br>
+                                <b>WAS</b>: Apache Tomcat 9<br>
                             </p>
-				            <br>
+
+                            <p>
+                                <strong>🚀 서비스 환경</strong><br><br>
+                                <b>OS</b>: Ubuntu 16.04<br>
+                                <b>Infra</b>: AWS Lightsail (리눅스 기반 배포)
+                            </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2022 - July 2022</span></div>
-                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2022.06 - 2022.07</span></div>
+                    </div>
+
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">조립식 컴퓨터 쇼핑몰</h3>
+                            <h3 class="mb-0">조립식 컴퓨터 쇼핑몰 (ComVelvet)</h3>
                             <br>
+                            <p><img src="assets/img/Computer.jpg" style="width: 100%;"></p>
+
                             <p>
-                                <img src="assets/img/Computer.jpg" style="width: 100%;">
+                                <strong>📌 프로젝트 개요</strong><br><br>
+                                JSP 기반 MVC(Model2) 아키텍처로 구현한 조립식 컴퓨터 쇼핑몰 웹 애플리케이션입니다.<br>
+                                관리자 페이지에서는 부품 등록/수정 및 공지사항 관리가 가능하며, 사용자 페이지에서는 상품 조회 및 주문 기능을 제공합니다. (팀 프로젝트)
                             </p>
+
                             <p>
-                                <strong>Com Velvet</strong><br>
-				            <P>
-			                 Model2 방식으로 조립식 컴퓨터 쇼핑몰을 구현하였습니다.<br>
-			                 관리자 페이지에서 부품을 관리하고, 수정할 수 있도록 했습니다.<br>
-			                 관리자 페이지나 index 페이지에서는 홍보를 하고, 최근 공지사항을 보여줍니다.<br>
-			                 회원은 주문을 하고 주문조회를 할 수 있습니다.<br>
-				            </P>
-                            <p>
-                                <button type="button" class="btn btn-link" onclick="window.open('https://github.com/Computer-ShoppingMall-Project')">Github</button>
-                                <button type="button" class="btn btn-link" onclick="window.open('assets/img/Com Velvet 프로젝트.pdf')">PPT</button>
+                                <button type="button" class="btn btn-link" onclick="window.open('https://github.com/Computer-ShoppingMall-Project')">GitHub</button>
+                                <button type="button" class="btn btn-link" onclick="window.open('assets/img/comvelvet_project.pdf')">PDF 보기</button>
                             </p>
+
                             <p>
-                                <strong>Development Environment</strong><br>
-                                <br>
-                                Language : Java(jdk-11.0), JavaScript <br>
-                                Skills : JSP, jQuery, BootStrap <br>
-                                Database : MariaDB <br>
-                                WAS : Apache Tomcat9 <br>
-                                IDE : Eclipse 2021-06 (4.18.0)
+                                <strong>🛠 개발 환경</strong><br><br>
+                                <b>Language</b>: Java 11, JavaScript<br>
+                                <b>Web Tech</b>: JSP, jQuery, Bootstrap<br>
+                                <b>Database</b>: MariaDB<br>
+                                <b>WAS</b>: Apache Tomcat 9<br>
                             </p>
+
                             <p>
-                                <strong>Service Environment</strong><br>
-                                OS: Ubuntu (16.04) <br>
-                                Platform : AWS Lightsail
+                                <strong>🚀 서비스 환경</strong><br><br>
+                                <b>OS</b>: Ubuntu 16.04<br>
+                                <b>Infra</b>: AWS Lightsail
                             </p>
-				            <br>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">April 2022 - May 2022</span></div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">2022.04 - 2022.05</span>
+                        </div>
                     </div>
+
                 </div>
             </section>
         </div>
     </body>
 </html>
+
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
