--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                                 <b>Domain</b>: DuckDNS 커스텀 서브도메인 (HTTPS 적용)<br>
                                 <b>배포 방식</b>: Docker + Nginx 기반 이중 컨테이너 구성
                             </p>
+                        </div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
