--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
                                     <tr>
                                         <td>Name</td>
                                         <td>&nbsp;:&nbsp;</td>
-                                        <td style="text-transform:capitalize;">박범진</td>
+                                        <td>박범진</td>
                                     </tr>
                                     <tr>
-                                        <td>CONTACT</td>
+                                        <td>Contact</td>
                                         <td>&nbsp;:&nbsp;</td>
-                                        <td style="text-transform:capitalize;">010-6258-8390</td>
+                                        <td>010-6258-8390</td>
                                     </tr>
                                     <tr>
                                         <td>Major</td>
                                         <td>&nbsp;:&nbsp;</td>
-                                        <td style="text-transform:capitalize;">인천대학교 정보통신공학과</td>
+                                        <td>인천대학교 정보통신공학과</td>
                                     </tr>
                                 </table>
                                 <br>
@@ -105,11 +105,11 @@
                                 <font size="4" color="black">
                                     <table>
                                         <tr>
-                                            <td>코드아이디어 자바개발팀 주임</td>
+                                            <td>코드아이디어 <span style="color: #888;">자바개발팀 주임</span></td>
                                             <td>&nbsp; :&nbsp; 2024.03 ~ 2025.04</td>
                                         </tr>
                                         <tr>
-                                            <td>유알피 행정포털팀 사원</td>
+                                            <td>유알피 <span style="color: #888;">행정포털팀 사원</span></td>
                                             <td>&nbsp; :&nbsp; 2022.08 ~ 2023.08</td>
                                         </tr>
                                     </table>
@@ -145,7 +145,7 @@
                             <br>
                             <div>
                                 <h3 class="mb-1">- Front-End</h3>
-                                <p>&nbsp;&nbsp;JavaScript (ES6+), React, TypeScript, jQuery, Thymeleaf, JSP, HTML5</p>
+                                <p>&nbsp;&nbsp;JavaScript (ES6+), React, TypeScript, jQuery, Thymeleaf, JSP</p>
                             </div>
                             <br>
                             <div>
@@ -155,15 +155,12 @@
                             <br>
                             <div>
                                 <h3 class="mb-1">- DevOps & Server</h3>
-                                <p>&nbsp;&nbsp;Linux (Ubuntu/CentOS), Docker, docker-compose, Nginx, Apache Tomcat, AWS EC2 / RDS</p>
+                                <p>&nbsp;&nbsp;Linux (Ubuntu/CentOS), Docker, Nginx, Apache Tomcat, AWS EC2 / RDS</p>
                             </div>
                             <br>
-                            <div>
-                                <h3 class="mb-1">- Tools & Collaboration</h3>
-                                <p>&nbsp;&nbsp;GitHub, IntelliJ, Postman, Swagger</p>
-                            </div>
                         </div>
                    </ul>
+                </div>
             </section>              
             <hr class="m-0" />         
             <hr class="m-0" />
@@ -175,24 +172,26 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">웹 기반 프로젝트 관리 시스템 (CPMS)</h3>
+                            <h3 class="mb-0">웹 기반 프로젝트 관리 시스템 (PMS)</h3>
                             <br>
                             <p>
                                 <img src="assets/img/cpms_image.jpeg" style="width: 100%;">
                             </p>
                             <br>
                             <p>
-                                <strong>📌 프로젝트 개요</strong><br><br>
-                                웹 프로젝트의 운영 및 유지보수 이력을 체계적으로 관리하고, 각 시스템의 담당자와 소통할 수 있는 내부용 PMS 시스템을 개발하였습니다.<br>
-                                기업 내 다양한 웹 서비스의 이슈, 요청사항, 처리 이력 등을 관리하는 백오피스 시스템으로서 <b>Spring Boot + React</b> 기반으로 전면 재설계한 <b>개인 프로젝트</b>입니다.
+                                <strong>📌 PMS 프로젝트 개요</strong><br><br>
+                                웹 프로젝트의 운영 및 유지보수 이력을 체계적으로 관리하고, 각 시스템의 담당자와 소통할 수 있는 시스템입니다.<br>
+                                기업 내 다양한 웹 서비스의 이슈, 요청사항, 처리 이력 등을 관리하는 백오피스 시스템으로서 <b>Spring Boot JPA + React</b> 기반 프로젝트입니다.
                             </p>
-
+                            <p>
+                                <button type="button" class="btn btn-link" onclick="window.open('https://cpms-prod84952.duckdns.org')">PMS 사이트 이동</button>
+                            </p>
                             <p>
                                 <button type="button" class="btn btn-link" onclick="window.open('https://github.com/orion174/cpms_api')">GitHub (Back-End)</button>
                                 <button type="button" class="btn btn-link" onclick="window.open('https://github.com/orion174/cpms_client_web')">GitHub (Front-End)</button>
-                                <button type="button" class="btn btn-link" onclick="window.open('assets/img/cpms_project.pdf')">PDF 보기</button>
+                                <button type="button" class="btn btn-link" onclick="window.open('assets/img/cpms_project.pdf')">포트폴리오 소개서 (PDF)</button>
                             </p>
-
+                            <br>
                             <p>
                                 <strong>🛠 개발 환경</strong><br><br>
                                 <b>Back-End</b>: Java 17, Spring Boot 3.2, JPA, QueryDSL<br>
@@ -200,7 +199,7 @@
                                 <b>Database</b>: MariaDB<br>
                                 <b>Infra Tools</b>: Docker, Nginx
                             </p>
-
+                            <br>
                             <p>
                                 <strong>🚀 배포 및 운영 환경</strong><br><br>
                                 <b>OS</b>: Ubuntu 22.04 (x64)<br>
@@ -209,6 +208,7 @@
                                 <b>배포 방식</b>: Docker + Nginx 기반 이중 컨테이너 구성
                             </p>
                         </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2025.04 - 2025.05</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -227,9 +227,9 @@
 
                             <p>
                                 <button type="button" class="btn btn-link" onclick="window.open('https://github.com/gdjJavaJoy/javajoylms')">GitHub</button>
-                                <button type="button" class="btn btn-link" onclick="window.open('assets/img/lms_project.pdf')">PDF 보기</button>
+                                <button type="button" class="btn btn-link" onclick="window.open('assets/img/lms_project.pdf')">포트폴리오 소개서 (PDF)</button>
                             </p>
-
+                            <br>
                             <p>
                                 <strong>🛠 개발 환경</strong><br><br>
                                 <b>Language</b>: Java 11, JavaScript<br>
@@ -238,7 +238,7 @@
                                 <b>Database</b>: MariaDB<br>
                                 <b>WAS</b>: Apache Tomcat 9<br>
                             </p>
-
+                            <br>
                             <p>
                                 <strong>🚀 서비스 환경</strong><br><br>
                                 <b>OS</b>: Ubuntu 16.04<br>
@@ -253,18 +253,18 @@
                             <h3 class="mb-0">조립식 컴퓨터 쇼핑몰 (ComVelvet)</h3>
                             <br>
                             <p><img src="assets/img/Computer.jpg" style="width: 100%;"></p>
-
+                            <br>
                             <p>
-                                <strong>📌 프로젝트 개요</strong><br><br>
+                                <strong>📌 Comvelvet 프로젝트 개요</strong><br><br>
                                 JSP 기반 MVC(Model2) 아키텍처로 구현한 조립식 컴퓨터 쇼핑몰 웹 애플리케이션입니다.<br>
                                 관리자 페이지에서는 부품 등록/수정 및 공지사항 관리가 가능하며, 사용자 페이지에서는 상품 조회 및 주문 기능을 제공합니다. (팀 프로젝트)
                             </p>
 
                             <p>
                                 <button type="button" class="btn btn-link" onclick="window.open('https://github.com/Computer-ShoppingMall-Project')">GitHub</button>
-                                <button type="button" class="btn btn-link" onclick="window.open('assets/img/comvelvet_project.pdf')">PDF 보기</button>
+                                <button type="button" class="btn btn-link" onclick="window.open('assets/img/comvelvet_project.pdf')">포트폴리오 소개서 (PDF)</button>
                             </p>
-
+                            <br>
                             <p>
                                 <strong>🛠 개발 환경</strong><br><br>
                                 <b>Language</b>: Java 11, JavaScript<br>
@@ -272,7 +272,7 @@
                                 <b>Database</b>: MariaDB<br>
                                 <b>WAS</b>: Apache Tomcat 9<br>
                             </p>
-
+                            <br>
                             <p>
                                 <strong>🚀 서비스 환경</strong><br><br>
                                 <b>OS</b>: Ubuntu 16.04<br>
